--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "vendor/bash-framework"]
 	path = vendor/bash-framework
-	url = git@github.com:adobe/bash-framework.git
+	url = git@github.com:sorinlg/bash-framework.git
